--- a/circle.yml
+++ b/circle.yml
@@ -43,6 +43,6 @@ test:
     - RAILS_ENV=test bundle exec rake
 
     # Ember app
-    # - cd frontend; npm test
+    - cd frontend; npm test
 
 # For customizations, see https://circleci.com/docs/config-sample
