--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,6 +6,7 @@
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "bourbon": "^4.2.6",
-    "neat": "^1.7.2"
+    "neat": "^1.7.2",
+    "normalize.css": "3.0.3"
   }
 }
